deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: honkai-rule-server
  labels:
    app.kubernetes.io/name: honkai-rule-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: honkai-rule-server
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
